syntax = "proto3";
package basekv;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.proto";
option optimize_for = SPEED;

message KVRangeId{
  uint64 epoch = 1;
  uint64 id = 2;
}

message Range{
  optional bytes startKey = 1; // the inclusive lower bound of the range if present, or it's a left open range
  optional bytes endKey = 2;   // the exclusive upper bound of the range if present, or it's a right open range
}

message KVPair{
  bytes key = 1;
  bytes value = 2;
}

message NullableValue{
  optional bytes value = 1;
}


